fix(jpa): 修复批量保存和查询构建中的多个问题
- 在 BatchSaveTemplate 中添加 PersistenceUnitUtil 支持以正确处理复杂 ID 类型
- 修复 BulkOperationTemplate 中的批处理循环逻辑，确保 CONTINUE 模式正常工作
- 修正 EncryptConverter 中的缓存大小计算，使用 KEY_CACHE.size() 避免计数器漂移
- 在 EntityFieldExtractor 中实现继承字段扫描，使用 getAllFields() 处理父类字段
- 添加 InaccessibleObjectException 处理以解决模块系统访问限制问题
- 优化 NodeResolver 中的函数调用逻辑，区分布尔和非布尔函数类型
- 为 NotGroup 添加空值检查以防止空指针异常
- 修复 LIKE_IGNORE_CASE 操作符中的转义字符处理逻辑
- 为 IN 和 NOT_IN 操作符添加空集合检查，避免无效查询
- 在 QueryMetricsCollector 中添加最大指标条目限制防止内存泄漏
- 扩展 QuerySpec toString() 输出以包含 GROUP BY、HAVING、ORDER BY 等信息
- 为软删除功能添加跨数据库兼容性支持，使用参数绑定替代硬编码值
- 使用弱引用缓存防止类加载器泄漏，改进 SoftDeleteHelper 字段缓存
- 更新 SQL 清理器中的美元引用模式以支持嵌套情况
- 优化 TransactionHelper 中的事务执行逻辑，正确处理 EntityManager 代理